[package]
name = "rsw-app"
version = "0.1.0"
authors = ["suren <suren>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsw-lib = { path = "../rsw-lib" }
num_cpus = "1.13.0"
crossterm = "0.18"
tui = { version = "0.13.0", features = ["crossterm"], default-features = false }  